Fix AdminUserListQuery.php query parameters.
