# src/EntryPoint/Http/Controller/AdminUserController.php
@@ -29,7 +29,7 @@ class AdminUserController extends AbstractApiController
     public function index(Request $request, QueryBus $queryBus): JsonResponse
     {
         $query = new AdminUserListQuery($request->query->getInt('page', 1), $request->query->getInt('limit', 15),
-            $request->query->getString('orderBy', 'name'), $request->query->getString('orderType', 'ASC'),
+            $request->query->getString('orderBy', 'name'), $request->query->getBoolean('orderDesc', false),
             $request->query->getBoolean('withDeleted', false));
 
         $response = $queryBus->ask($query);
